--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "proxy": "https://ckd-risk-prediction-backend-python.azurewebsites.net",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -17,7 +18,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
-    "react-router-dom": "^6.22.0"
+    "react-router-dom": "^6.22.0",
+    "@progress/kendo-react-pdf": "^5.19.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
